# AstroSER-Player

./: .gitignore  CLAUDE.md  README.md  README_en.md  main.py  pyproject.toml  run.py
astroser/: __init__.py  app.py
astroser/core/: centroid.py  debayer.py  deconvolution.py  delay_analysis.py  frame_pipeline.py  image_adjust.py  mp4_export.py  playback_engine.py  ser_parser.py  statistics.py  timestamp_analysis.py  tracking_log.py
astroser/native/: __init__.py  fast_ops.c
astroser/ui/: adjustments_panel.py  chart_widget.py  file_info_dialog.py  file_info_panel.py  gl_viewer_widget.py  histogram_widget.py  i18n.py  lucky_panel.py  main_window.py  mount_panel.py  roi_selector.py  statistics_panel.py  theme.py  timestamp_panel.py  tracking_panel.py  transport_bar.py  trim_timeline.py  viewer_widget.py
