[project]
name = "astroser-player"
version = "0.1.0"
description = "Cross-platform SER astronomical video file player"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "numpy>=1.24",
    "scipy>=1.10",
    "PyOpenGL>=3.1",
]

[project.scripts]
astroser = "astroser.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
